<resources>
    <string name="app_name">Blur Effect Camera</string>
    <string name="instagram">Instagram</string>
    <string name="save_image_lib_no_email_app">There is no email app installed on your device to handle this request.</string>
    <string name="collage_lib_unlock_message">Unlock to move photos out of grids?</string>
    <string name="collage_lib_lock_message">Lock to move photos inside grids?</string>
    <string name="collage_lib_no_email_message">@string/save_image_lib_no_email_app</string>
    <string name="permission_necessary" translatable="false">Permission necessary</string>
    <string name="external_storage_and_camera_permission_are_necessary" translatable="false">External storage permission is necessary</string>
    <string name="gallery_photos" translatable="false">%d photos</string>
    <string name="gallery_lib_max" translatable="false">Max %d</string>
    <string name="gallery_select_an_album" translatable="false">Select a Photo Album</string>
    <string name="gallery_lib_remove_all" translatable="false">Remove All</string>
    <string name="gallery_no_more" translatable="false">Sorry, no more than %d photos!</string>
    <string name="gallery_message_select_one" translatable="false">Please select at least %d photo!</string>
    <string name="loading_image" translatable="false">Loading image!</string>
    <string name="image_format_error_message" translatable="false">This app is working only with image files, please select an image file.</string>
    <string name="save_image_directory_error_message" translatable="false">Your preferred directory can not be used at the time. Photo will be saved on %s</string>
    <string name="permission_warning" translatable="false">You need to give permission to read and write to sdcard to be able to use this app!</string>
    <string name="save_image_lib_press_back" translatable="false">Please press BACK again to exit!</string>
    <string name="photo_activity_no_camera" translatable="false">There is no Camera app to handle this request!</string>
    <string name="save_image_lib_no_gallery" translatable="false">There are no gallery applications installed.</string>
    <string name="crop_file_name" translatable="false">.appdata</string>
    <string name="text_lib_menu_color" translatable="false">Color</string>
    <string name="preview_text" translatable="false">Preview Text</string>
    <string name="canvas_text_hint" translatable="false">Enter Text Here</string>
    <string name="canvas_text_enter_text" translatable="false">Please enter text</string>
    <string name="text_lib_menu_keyboard" translatable="false">Keyboard</string>
    <string name="text_lib_menu_font" translatable="false">Font</string>
    <string name="hdr_fx_opacity" translatable="false">Opacity</string>
    <string name="text_lib_menu_align" translatable="false">Align</string>
    <string name="crop_getting_crop_image" translatable="false">Getting the cropped image!</string>
    <string name="crop_image_load_error_message" translatable="false">Could not load the image!</string>
    <string name="square_lib_footer_crop" translatable="false">Crop</string>
    <string name="pattern_manage" translatable="false">Manage</string>
    <string name="save_image_lib_save_image_message" translatable="false">Would you like to save image?</string>
    <string name="square_lib_footer_fx" translatable="false">Fx</string>
    <string name="tilt_none" translatable="false">None</string>
    <string name="tilt_radial" translatable="false">Radial</string>
    <string name="tilt_linear" translatable="false">Linear</string>
    <string name="save_image_lib_Frame" translatable="false">Frame</string>
    <string name="save_image_lib_select_blur" translatable="false">Blur</string>
    <string name="lyrebirdlib_buy_pro" translatable="false">Buy pro version to use this feature!</string>
    <string name="effect_parameter_bundle_name" translatable="false">global_parameter</string>
    <string name="collage_lib_header_cancel" translatable="false">Cancel</string>
    <string name="collage_lib_header_save" translatable="false">Save</string>
    <string name="save_image_lib_size" translatable="false">Size</string>
    <string name="collage_lib_footer_button_space" translatable="false">Space</string>
    <string name="collage_lib_slider_label_corner" translatable="false">Corner</string>
    <string name="_1_1" translatable="false">1:1</string>
    <string name="_2_1" translatable="false">2:1</string>
    <string name="_1_2" translatable="false">1:2</string>
    <string name="_3_2" translatable="false">3:2</string>
    <string name="_2_3" translatable="false">2:3</string>
    <string name="_4_3" translatable="false">4:3</string>
    <string name="_4_5" translatable="false">4:5</string>
    <string name="_5_7" translatable="false">5:7</string>
    <string name="_16_9" translatable="false">16:9</string>
    <string name="_9_16" translatable="false">9:16</string>
    <string name="border" translatable="false">border</string>
    <string name="_10" translatable="false">+10</string>
    <string name="_14" translatable="false">14</string>
    <string name="Effect_BwBlur" translatable="false">3:4&amp;W Blur</string>
    <string name="collage_lib_slider_label_cascade_number" translatable="false">Square Count</string>
    <string name="hdr_fx_original" translatable="false">"Original "</string>
    <string name="collage_lib_footer_button_layout" translatable="false">Layout</string>
    <string name="save_image_lib_footer_sticker" translatable="false">Sticker</string>
    <string name="collage_lib_footer_button_border" translatable="false">Border</string>
    <string name="collage_lib_footer_button_cascade" translatable="false">Cascade</string>
    <string name="square_lib_footer_background" translatable="false">Background</string>
    <string name="save_image_lib_footer_ratio" translatable="false">save_image_lib_footer_ratio</string>
    <string name="save_image_lib_footer_text" translatable="false">Text</string>
    <string name="collage_lib_footer_button_filter" translatable="false">Filter</string>
    <string name="collage_lib_footer_button_lock" translatable="false">Lock</string>
    <string name="collage_lib_context_button_swap" translatable="false">Swap</string>
    <string name="collage_lib_context_button_delete" translatable="false">Delete</string>
    <string name="collage_lib_context_button_fill" translatable="false">Fill</string>
    <string name="collage_lib_context_button_inside" translatable="false">Inside</string>
    <string name="collage_lib_context_button_left" translatable="false">Left</string>
    <string name="collage_lib_context_button_right" translatable="false">Right</string>
    <string name="collage_lib_context_button_up" translatable="false">Up</string>
    <string name="collage_lib_context_button_vertical" translatable="false">Vertical</string>
    <string name="collage_lib_context_button_zoom_in" translatable="false">Zoom In</string>
    <string name="collage_lib_context_button_zoom_out" translatable="false">Zoom Out</string>
    <string name="collage_lib_context_button_down" translatable="false">Down</string>
    <string name="collage_lib_swap_message" translatable="false">Select another photo to swap!</string>
    <string name="collage_lib_edit_message" translatable="false">Select a photo to edit.</string>
    <string name="collage_lib_context_button_horizontal" translatable="false">Horizontal</string>
    <string name="collage_lib_save_no" translatable="false">No</string>
    <string name="collage_lib_delete_last_image_error_message" translatable="false">"You can't delete last image!"</string>
    <string name="collage_lib_delete_message" translatable="false">Do you want to delete image?</string>
    <string name="collage_lib_maximum_zoom" translatable="false">You reached maximum zoom!</string>
    <string name="collage_lib_minimum_zoom" translatable="false">You reached minimum zoom!</string>
    <string name="collage_lib_max_bottom" translatable="false">You reached max bottom!</string>
    <string name="collage_lib_max_top" translatable="false">You reached max top!</string>
    <string name="collage_lib_max_right" translatable="false">You reached max right!</string>
    <string name="collage_lib_max_left" translatable="false">You reached max left!</string>
    <string name="collage_lib_loading_message" translatable="false">loading images!</string>
    <string name="collage_lib_saving_message" translatable="false">Saving image ...</string>
    <string name="save_image_lib_image_saved_message" translatable="false">Image has been saved to the /SD %s folder.</string>
    <string name="collage_lib_loading_error_message" translatable="false">"Couldn't load images!"</string>
    <string name="collage_lib_context_button_edit" translatable="false">Edit</string>
    <string name="pip_lib_no_network" translatable="false">No network!</string>
    <string name="sticker_items_selected_zero" translatable="false">0/%d items Selected</string>
    <string name="downloading" translatable="false">Downloading!</string>
    <string name="sticker_choose_limit" translatable="false">You can not choose more than %d stickers.</string>
    <string name="sticker_items_selected" translatable="false">/%d items Selected</string>
    <string name="toast_successfully_saved" translatable="false">Image Saved successfully.</string>
    <string name="toast_alredy_present_in_SD_card" translatable="false">Image already present in SD card.</string>
    <string name="directory">/Blur Camera/</string>
    <string name="square_lib_load_error">@string/save_image_lib_loading_error_message</string>
    <string name="save_image_lib_loading_error_message">Could not load the photo, please use another GALLERY app!</string>
    <string name="square_lib_save_no">@string/save_image_lib_save_no</string>
    <string name="save_image_lib_save_no">No</string>
    <string name="save_image_lib_saving_message">Saving image ...</string>
    <string name="no_instagram_app">Instagram is not installed on your device!</string>
    <string name="hashtag_twitter">\#nocrop made by @lyrebirdstudio</string>
    <string name="square_lib_footer_tools">Tools</string>
    <string name="square_lib_footer_sticker">@string/save_image_lib_footer_sticker</string>
    <string name="square_lib_footer_filter">@string/collage_lib_footer_button_filter</string>
    <string name="square_lib_footer_blur">@string/save_image_lib_select_blur</string>
    <string name="square_lib_footer_text">@string/save_image_lib_footer_text</string>
    <string name="square_lib_footer_frame">@string/save_image_lib_Frame</string>
    <string name="square_lib_rotate_left">@string/collage_lib_context_button_left</string>
    <string name="square_lib_rotate_right">@string/collage_lib_context_button_right</string>
    <string name="square_lib_rotate_fit_fill">@string/collage_lib_context_button_fill</string>
    <string name="square_lib_blur">@string/save_image_lib_select_blur</string>
    <string name="square_lib_cascade_number">@string/collage_lib_slider_label_cascade_number</string>
    <string name="square_lib_rotate_fit_inside">@string/collage_lib_context_button_inside</string>
    <string name="square_lib_save_message">@string/save_image_lib_save_image_message</string>
    <string name="choose_clg">Choose Collage</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="sticker_navigation_name_list_beard">Beard</string>
    <string name="sticker_navigation_name_list_birds">Love Birds</string>
    <string name="sticker_navigation_name_list_candy">Candy</string>
    <string name="sticker_navigation_name_list_comic">Comic</string>
    <string name="sticker_navigation_name_list_emoji_1">Emoji</string>
    <string name="sticker_navigation_name_list_emoji_2">Smiley</string>
    <string name="sticker_navigation_name_list_emoji_4">Emoji Part 2</string>
</resources>