<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffdad6d3"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gallery_header_back_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/gallery_back_arrow" />

        <TextView
            android:id="@+id/textView_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="@dimen/gallery_main_layout_header_padding"
            android:text="@string/gallery_select_an_album"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffffff"
            android:textSize="@dimen/gallery_main_layout_header_text_size" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="4.8"
        android:gravity="center"
        android:numColumns="2" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.6"
        android:background="#ffffffff">

        <TextView
            android:id="@+id/gallery_delete_all"
            style="@style/gallery_tool_text_style"
            android:drawableLeft="@drawable/gallery_ic_delete"
            android:text="(0)" />

        <TextView
            android:id="@+id/gallery_max"
            style="@style/gallery_tool_text_style"
            android:layout_toRightOf="@+id/gallery_delete_all"
            android:text="@string/gallery_lib_max" />

        <TextView
            android:id="@+id/gallery_next"
            style="@style/gallery_tool_text_style"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_selector"
            android:drawableRight="@drawable/gallery_ic_right_arrow"
            android:text="Next"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@+id/gallery_remove_all"
            style="@style/gallery_tool_text_style"
            android:background="#ffff4949"
            android:text="@string/gallery_lib_remove_all"
            android:textColor="#ffffffff"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.1"
        android:background="#ffeeeeee"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="5.0"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/selected_image_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <Button
            android:id="@+id/button_footer_count"
            android:layout_width="@dimen/gallery_footer_count_button_width"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/selector_gallery_ok_button_bg"
            android:drawableBottom="@drawable/ic_done_white"
            android:padding="@dimen/gallery_footer_count_button_padding"
            android:text="0"
            android:textColor="#ffffffff"
            android:textSize="@dimen/gallery_footer_count_button_text_size"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>



</LinearLayout>