<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/grid_header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/sticker_gallery_header_height"
        android:background="@drawable/header_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_header"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sticker_gallery_header_height"
            android:clickable="true"
            android:drawableLeft="@drawable/gallery_back_arrow"
            android:gravity="center_vertical"
            android:text="@string/sticker_items_selected_zero"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffffff"
            android:textSize="@dimen/sticker_gallery_main_layout_header_text_size"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/sticker_gallery_ok"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/app_name"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:src="@drawable/done_big"
            android:text="@android:string/ok" />
    </RelativeLayout>


    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/horizontal_recycler_view"
        android:layout_below="@+id/grid_header"
        android:columnWidth="@dimen/sticker_gllery_grid_item_layout_size"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/horizontal_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_200" />


    <ImageView
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:paddingLeft="5.0dip"
        android:paddingTop="15.0dip"
        android:paddingRight="5.0dip"
        android:paddingBottom="15.0dip"
        android:src="@drawable/swipe_right"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/progress_download"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20.0dip"
        android:background="#ff424242"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20.0dip"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:text="@string/downloading" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlViewDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />


</RelativeLayout>